--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     
 </head>
 <body>
+    <div class="container">
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+    </div>
     
 </body>
 </html>
