Added the castlegate animation

--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="pillar-animation" class="pillar-animation">
+      <div class="pillar pillar-1"></div>
+      <div class="pillar pillar-2"></div>
+      <div class="pillar pillar-3"></div>
+      <div class="pillar pillar-4"></div>
+    </div>
     <div class="container">
         <button id="navigate-btn">
             <img src="../Landing Page/Lucid_Origin_Minimalistic_modern_logo_of_a_sleek_fox_represent_2.png" alt="Lucid Logo" class="logo-img">
