--- a/Auth Page/Auth.html
+++ b/Auth Page/Auth.html
@@ -8,7 +8,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
     <link rel="stylesheet" href="auth.css" />
-    <title>Login Page | Caged coder</title>
+    <title>Auth Page</title>
   </head>
 
   <body>
@@ -19,15 +19,7 @@
           <div class="social-icons">
             <button type="button" class="icon">
               <i class="fa-brands fa-google-plus-g"></i>
-            </button>
-            <button type="button" class="icon">
-              <i class="fa-brands fa-facebook-f"></i>
-            </button>
-            <button type="button" class="icon">
-              <i class="fa-brands fa-github"></i>
-            </button>
-            <button type="button" class="icon">
-              <i class="fa-brands fa-linkedin-in"></i>
+              <span class="icon-text">Sign in with Google</span>
             </button>
           </div>
           <span>or use your email for registeration</span>
@@ -43,15 +35,7 @@
           <div class="social-icons">
             <button type="button" class="icon">
               <i class="fa-brands fa-google-plus-g"></i>
-            </button>
-            <button type="button" class="icon">
-              <i class="fa-brands fa-facebook-f"></i>
-            </button>
-            <button type="button" class="icon">
-              <i class="fa-brands fa-github"></i>
-            </button>
-            <button type="button" class="icon">
-              <i class="fa-brands fa-linkedin-in"></i>
+              <span class="icon-text">Sign in with Google</span>
             </button>
           </div>
           <span>or use your email password</span>
