Moved stuff and organized it

--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Miriai</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/index-style.css">
 </head>
 <body>
     <div id="pillar-animation" class="pillar-animation">
@@ -15,9 +15,9 @@
     </div>
     <div class="container">
         <button id="navigate-btn">
-            <img src="../Landing Page/Lucid_Origin_Minimalistic_modern_logo_of_a_sleek_fox_represent_2.png" alt="Lucid Logo" class="logo-img">
+            <img src="../images/Lucid_Origin_Minimalistic_modern_logo_of_a_sleek_fox_represent_2.png" alt="Lucid Logo" class="logo-img">
         </button>
     </div>
-    <script src="script.js"></script>
+    <script src="../scripts/script.js"></script>
 </body>
 </html>
