Added the auth and the UI

--- a/Auth Page/auth1.html
+++ b/Auth Page/auth1.html
@@ -9,9 +9,20 @@
 </head>
 <body>
     <div class="container">
-        <div class="item1"></div>
-        <div class="item1"></div>
-        <div class="item1"></div>
+        <div class="item1">
+            <h1>Welcome to Mirai!</h1>
+            <p>Future.Built.</p>
+        </div>
+        <div class="item2">
+            <button type="button" class="icon">Fresher</button>
+        </div>
+        <div class="item2">
+            <button type="button" class="icon">Senior</button>
+        </div>
+        <div class="item2">
+            <button type="button" class="icon">Alumni</button>
+        </div>
     </div>  
+    <script src="../scripts/auth1.js"></script>
 </body>
 </html>
