Changed the wrong tagline

--- a/Home/home.html
+++ b/Home/home.html
@@ -15,7 +15,7 @@
                 <img src="../images/Lucid_Origin_Minimalistic_modern_logo_of_a_sleek_fox_represent_2.png" alt="Mirai Logo" class="nav-logo">
                 <div class="nav-text">
                     <h1>Mirai</h1>
-                    <p>Future.Built.</p>
+                    <p>Your Future, Guided by Experience</p>
                 </div>
             </div>
             <div class="nav-links">
