--- a/Auth Page/auth1.html
+++ b/Auth Page/auth1.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="item1">
             <h1>Welcome to Mirai!</h1>
-            <p>Future.Built.</p>
+            <p>Your Future, Guided by Experience</p>
         </div>
         <div class="item2">
             <button type="button" class="icon">Fresher</button>
