Added smoother animation and changed mentor tags

--- a/Home/home.html
+++ b/Home/home.html
@@ -178,8 +178,8 @@
                     <div class="mentor-card">
                         <div class="mentor-avatar"></div>
                         <div class="mentor-info">
-                            <h3>Sarah Johnson</h3>
-                            <p>Senior ML Engineer at Google</p>
+                            <h3>Dhruv Sharma</h3>
+                            <p>Management Head at Mirai</p>
                             <div class="mentor-skills">
                                 <span class="skill-tag">Machine Learning</span>
                                 <span class="skill-tag">Python</span>
@@ -191,8 +191,8 @@
                     <div class="mentor-card">
                         <div class="mentor-avatar"></div>
                         <div class="mentor-info">
-                            <h3>Alex Chen</h3>
-                            <p>Full-Stack Developer at Microsoft</p>
+                            <h3>Kaushik Raj</h3>
+                            <p>Management Consultant at Mirai</p>
                             <div class="mentor-skills">
                                 <span class="skill-tag">React</span>
                                 <span class="skill-tag">Node.js</span>
@@ -225,7 +225,7 @@
                         </div>
                         <div class="chat-messages">
                             <div class="message ai-message">
-                                <p>Hello! I'm here to help guide your career journey. Based on your profile, I can suggest personalized learning paths and opportunities.</p>
+                                <p>Sorry, we will be providing this service later on in the future.</p>
                             </div>
                         </div>
                         <div class="chat-input">
