--- a/Home/home.html
+++ b/Home/home.html
@@ -43,7 +43,7 @@
                             <i data-lucide="book-open"></i>
                         </div>
                         <div class="stat-content">
-                            <h3>12</h3>
+                            <h3>3</h3>
                             <p>Courses Available</p>
                         </div>
                     </div>
@@ -52,7 +52,7 @@
                             <i data-lucide="clock"></i>
                         </div>
                         <div class="stat-content">
-                            <h3>47</h3>
+                            <h3>30</h3>
                             <p>Hours of Learning</p>
                         </div>
                     </div>
@@ -61,7 +61,7 @@
                             <i data-lucide="users"></i>
                         </div>
                         <div class="stat-content">
-                            <h3>8</h3>
+                            <h3>2</h3>
                             <p>Expert Mentors</p>
                         </div>
                     </div>
@@ -96,7 +96,7 @@
                             <i data-lucide="graduation-cap"></i>
                         </div>
                         <h3>Courses</h3>
-                        <p>Learn from industry experts with hands-on projects</p>
+                        <p>Learn from your seniors with hands-on projects</p>
                         <button class="feature-btn">Explore Courses</button>
                     </div>
                     <div class="feature-card" data-feature="mentorship">
@@ -104,7 +104,7 @@
                             <i data-lucide="user-check"></i>
                         </div>
                         <h3>Mentorship</h3>
-                        <p>1-on-1 sessions with experienced professionals</p>
+                        <p>1-on-1 sessions with experienced Alumni</p>
                         <button class="feature-btn">Find Mentors</button>
                     </div>
                     <div class="feature-card" data-feature="ai">
@@ -124,7 +124,7 @@
             <div class="container">
                 <div class="section-header">
                     <h2>Available Courses</h2>
-                    <p>Enhance your skills with our comprehensive course catalog</p>
+                    <p>Enhance your skills with a comprehensive course catalog created by your very own college seniors</p>
                 </div>
                 <div class="courses-grid">
                     <div class="course-card">
@@ -172,7 +172,7 @@
             <div class="container">
                 <div class="section-header">
                     <h2>Expert Mentors</h2>
-                    <p>Connect with industry professionals for personalized guidance</p>
+                    <p>Connect with your college Seniors or Alumni Who faced the very same problems</p>
                 </div>
                 <div class="mentors-grid">
                     <div class="mentor-card">
