--- a/Auth Page/auth.html
+++ b/Auth Page/auth.html
@@ -17,10 +17,10 @@
         <form>
           <h1>Create Account</h1>
           <div class="social-icons">
-            <button type="button" class="icon">
+            <a href="/auth/google" class="icon">
               <i class="fa-brands fa-google-plus-g"></i>
               <span class="icon-text">Sign in with Google</span>
-            </button>
+            </a>
           </div>
           <span>or use your email for registeration</span>
           <input type="text" placeholder="Name" />
@@ -33,10 +33,10 @@
         <form>
           <h1>Sign In</h1>
           <div class="social-icons">
-            <button type="button" class="icon">
+            <a href="/auth/google" class="icon">
               <i class="fa-brands fa-google-plus-g"></i>
               <span class="icon-text">Sign in with Google</span>
-            </button>
+            </a>
           </div>
           <span>or use your email password</span>
           <input type="email" placeholder="Email" />
