--- a/Home/home.html
+++ b/Home/home.html
@@ -12,7 +12,7 @@
     <div class="navbar">
         <div class="nav-container">
             <div class="nav-brand">
-                <img src="../images/Lucid_Origin_Minimalistic_modern_logo_of_a_sleek_fox_represent_2.png" alt="Mirai Logo" class="nav-logo">
+                <img src="/images/Lucid_Origin_Minimalistic_modern_logo_of_a_sleek_fox_represent_2.png" alt="Mirai Logo" class="nav-logo">
                 <div class="nav-text">
                     <h1>Mirai</h1>
                     <p>Your Future, Guided by Experience</p>
@@ -381,7 +381,7 @@
         </div>
     </div>
 
-    <script src="../scripts/home.js"></script>
+    <script src="/scripts/home.js"></script>
     <script>
         // Initialize Lucide icons
         document.addEventListener('DOMContentLoaded', function() {
