Added cousre and fixed auth2

--- a/Home/home.html
+++ b/Home/home.html
@@ -249,6 +249,7 @@
                         <div class="profile-avatar"></div>
                         <div class="profile-details">
                             <h3 id="profile-name">Student Name</h3>
+                            <p id="profile-email">Email Address</p>
                             <p id="profile-college">College Name</p>
                             <p id="profile-course">Course</p>
                             <p id="profile-date">Joined on: <span></span></p>
