Trid fixing - failed

--- a/Home/home.html
+++ b/Home/home.html
@@ -19,11 +19,11 @@
                 </div>
             </div>
             <div class="nav-links">
-                <a href="#" class="nav-link active" data-section="home">Home</a>
-                <a href="#" class="nav-link" data-section="courses">Courses</a>
-                <a href="#" class="nav-link" data-section="mentorship">Mentorship</a>
-                <a href="#" class="nav-link" data-section="ai">Mirai AI</a>
-                <a href="#" class="nav-link" data-section="profile">Profile</a>
+                <a href="#home" class="nav-link active" data-section="home">Home</a>
+                <a href="#courses" class="nav-link" data-section="courses">Courses</a>
+                <a href="#mentorship" class="nav-link" data-section="mentorship">Mentorship</a>
+                <a href="#ai" class="nav-link" data-section="ai">Mirai AI</a>
+                <a href="#profile" class="nav-link" data-section="profile">Profile</a>
             </div>
         </div>
     </div>
